[package]
name = "keystore"
version = "0.1.0"
authors = ["Алексей Карасев <karasev.alexey@gmail.com>"]

[lib]
path = "src/lib.rs"
name = "keystore_lib"

[dependencies]
ethkey = {version = "0.3.0", path = "./ethkey"}
clap = {version = "2", features = ["yaml"]}
config = "0.9"
diesel = { version = "1.3.3", features = ["postgres", "chrono", "extras"] }
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1.7"
http_router = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
lazy_static = "1.1.0"
uuid = { version = "0.6", features = ["use_std", "v4", "serde"] }
log = "0.4"
r2d2 = "0.8.1"
sentry = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_qs = "0.4"
validator = "0.8"
validator_derive = "0.8"
regex = "1"
rand = "0.5"
base64 = "0.9"
